<resources>
    <string name="app_name">MyAppPoemas</string>
        <string name="tituloBandera">
            Poemas a la Bandera de Guatemala.
        </string>

        <string name="bCeleste">
            Bandera celeste y blanca,\n
            bandera de mi patria,\n
            jirón de nuestro cielo,\n
            te canto con fervor\n
            y juro defenderte\n
            con brío y con denuedo,\n
            si oscurecer osaran\n
            las glorias de tu sol.\n
            \n
            La escuela me ha enseñado\n
            que en todas partes fuiste,\n
            emblema de trabajo,\n
            de libertad y honor;\n
            por mares y montañas\n
            el mundo recorriste\n
            llevando por doquiera\n
            la luz de tu esplendor.\n
            \n
            Bandera que eres gloria\n
            de un pueblo generosos,\n
            y de los hombres eres\n
            un vínculo de paz,\n
            bajo tu manto cubres\n
            a todo aquel que anhele\n
            honrar con sus virtudes\n
            tu augusta majestad.\n
            \n
            Bandera celeste y blanca,\n
            bandera de mi patria,\n
            jirón de nuestro cielo,\n
            te canto con fervor\n
            y juro defenderte\n
            con brío y con denuedo,\n
            si oscurecer osaran\n
            las glorias de tu sol.\n
            \n
            La escuela me ha enseñado\n
            que en todas partes fuiste,\n
            emblema de trabajo,\n
            de libertad y honor;\n
            por mares y montañas\n
            el mundo recorriste\n
            llevando por doquiera\n
            la luz de tu esplendor.\n
            \n
            Bandera que eres gloria\n
            de un pueblo generosos,\n
            y de los hombres eres\n
            un vínculo de paz,\n
            bajo tu manto cubres\n
            a todo aquel que anhele\n
            honrar con sus virtudes\n
            tu augusta majestad.\n
            \n
        </string>

    <string name="bAmada">
        Aquí está la bandera idolatrada,\n
        la enseña que Belgrano nos legó.\n
        Cuando triste la Patria esclavizada\n
        con valor sus vínculos rompió.\n
        \n

        Aquí está la bandera esplendorosa\n
        que al mundo con sus triunfos admiró.\n
        Cuando altiva en la lucha y victoriosa\n
        la cima de los Andes escaló.\n
        \n

        Aquí está la bandera que un día\n
        en la batalla tremoló triunfal,\n
        y llena de orgullo y bizarría\n
        a San Lorenzo se dirigió inmortal.\n
        Aquí está como el cielo refulgente\n
        ostentando sublime majestad.\n
        \n

        Después de haber cruzado el continente\n
        exclamando a su paso:\n
        ¡Libertad!¡Libertad! ¡Libertad!\n
        \n
        </string>

    <string name="banderaMia">
        Esta mañana estuve pensando en ti.\n
        Todavía no salía el sol y menos\n
        La aurora y\n
        Ya estoy contigo\n
        \n
        Sintiendo tus pasiones,\n
        tu dolor y tu cariño.\n
        Entre tus más hondos revuelos\n
        te vez como siempre,\n
        Los años no pasan en ti,\n
        Cada día que pasa aumenta\n
        tu firmeza y tu valor.\n
        La vida adentro,\n
        En tus mas íntimos recuerdos y\n
        Tan airosa y tan cadente.\n
        \n
        Tus colores escurren por tu cuerpo.\n
        El Azul recorre tu silueta territorial,\n
        Una vida eterna y llena de goce.\n
        \n
        Un blanco firme en disciplina.\n
        La pureza de tu alma se contrasta\n
        En la inocencia de tus generaciones.\n
        Origen de tu historia,\n
        De tu sed de libertad y\n
        riqueza de tu imperio.\n
        \n
        </string>

    <string name="bcaminando">
        Esta mañana estuve pensando en ti.\n
        Todavía no salía el sol y menos\n
        La aurora y\n
        Ya estoy contigo\n
        \n
        Sintiendo tus pasiones,\n
        tu dolor y tu cariño.\n
        \n
        Entre tus más hondos revuelos\n
        te vez como siempre,\n
        Los años no pasan en ti,\n
        Cada día que pasa aumenta\n
        tu firmeza y tu valor.\n
        \n
        La vida adentro,\n
        En tus mas íntimos recuerdos y\n
        Tan airosa y tan cadente.\n
        \n
        Tus colores escurren por tu cuerpo.\n
        El Azul recorre tu silueta territorial,\n
        Una vida eterna y llena de goce.\n
        \n
        Un blanco firme en disciplina.\n
        La pureza de tu alma se contrasta\n
        En la inocencia de tus generaciones.\n
        \n
        Origen de tu historia,\n
        De tu sed de libertad y\n
        riqueza de tu imperio.\n
        \n
        </string>

    <string name="tituloMonja">
        Poemas a la Monja Blanca.
        </string>
    <string name="simbolo">
        Hermosa Monja Blanca,\n
        de las flores la monarca;\n
        \n
        eres símbolo de paz\n
        que crece en las montañas de la Verapaz;\n
        \n
        eres símbolo de pureza y belleza\n
        un regalo de la naturaleza;\n
        \n
        eres símbolo de arte\n
        por todos digna de admirarte;\n
        \n
        eres símbolo de mi nación\n
                \n
        ¡Guatemala entera te lleva en el corazón!\n
        \n
        Autor: Sven Sánchez
        \n
                \n
        </string>


    <string name="bellaMonj">
        Bella Monja Blanca de Guatemala\n
        Tu hermosura cautiva a propios y extraños\n
        Tu rareza te viste con traje de gala\n
        Para ser admirada por adultos y niños.\n
        \n
        Oh Monja Blanca, encanto de diamante\n
        Flor nacional de mi patria amada\n
        Musa del poeta, poesía del estudiante\n
        Tu escasez y lindura te hace delicada.\n
        \n
        Excelsa Monja Blanca de mi país\n
        Reina de las verdes montañas\n
        Te aprecio desde que existís\n
        Como símbolo de grandes hazañas\n
        \n
        Monja Blanca, símbolo patrimonial\n
        En una moneda fuiste acuñada\n
        Para conservar tu belleza natural\n
        De las orquídeas la más soñada.\n
        \n
        Autor: Edwin Yanes\n
        </string>


    <string name="florVera">
        Belleza de la naturaleza\n
        cuyo encanto primaveral,\n
        manifiesta su pureza\n
        producto de la naturaleza.\n
        \n
        Tu hermosura embellece\n
        cual amanecer de un día,\n
        cuando el sol resplandece\n
        anunciando un buen día.\n
        \n
        Pétalos perfumados en flor\n
        cuyo aroma de frescura\n
        armoniza e inspira al cantor\n
        cual suave viento que susurra.\n
        \n
        Flor de mi Verapaz querida,\n
        encanto de selva madre\n
        simbolizas mi Patria querida\n
        por ternura eres como una Madre.\n
        \n
        Autor: Eliseo Fernando Chó Pec\n
        \n
        </string>

    <string name="tituloQuetzal">
        Poemas al Ave Nacional.
        </string>
    <string name="quetz1">
    Quetzal, bella y encantadora ave\n
    símbolo Nacional de nuestra libertad\n
    luz de mi patria, de plumaje suave\n
    llevas en tu pecho el  lema de verdad.\n
     \n
    Pájaro Quetzal emblema de mi país\n
    signo de leal y rotunda amistad\n
    pues en el pecho del hombre morís\n
    expresando tu profunda  hermandad.\n
        \n
    Pájaro Quetzal de bosques nublados\n
    bosques lluviosos y altas montañas\n
    que te posas sobre los acantilados\n
    para esconder tus grandes hazañas.\n
        \n
    Pájaro Quetzal, nuestra alma mater\n
    te quiere conservar para la posteridad\n
    aunque de todos debe ser un deber\n
    pues eres estandarte de lucha y bondad.\n
    \n
    Pájaro Quetzal, tu belleza te hace único\n
    digno de pleno respeto y admiración\n
    yo bardo te escribo y te rindo tribúnico.\n
    para resaltar tu grandeza en la nación.\n
      \n
    Autor: Edwin Yanes\n
    </string>

    <string name="quetz2">
        ¡Patria de las perfectas luces, tuya\n
    la ingenua, agraria y melodiosa fiesta,\n
    campos que cubren hoy brazos de cruces!\n
     \n
    ¡Patria de los perfectos lagos, altos\n
    espejos que tu mano acerca al cielo\n
    para que vea Dios tantos estragos!\n
     \n
    ¡Patria de los perfectos montes, cauda\n
    de verdes curvas imantando auroras,\n
    hoy por cárcel te dan tus horizontes!\n
        \n
        ¡Patria de los perfectos días, horas\n
    de pájaros, de flores, de silencio\n
    que ahora, ¡oh dolor!, son agonías!\n
     \n
    ¡Patria de los perfectos cielos, dueña\n
    de tardes de oro y noches de luceros,\n
    alba y poniente que hoy visten tus duelos!\n
     \n
    ¡Patria de los perfectos valles, tienden\n
    de volcán a volcán verdes hamacas\n
    que escuchan hoy llorar casas y calles!\n
     \n
    ¡Patria de los perfectos frutos, pulpa\n
    de paraíso en cáscara de luces,\n
        agridulces ahora por tus lutos!\n
        \n
        Autor: Miguel Angel Asturias.\n
        </string>

    <string name="quetz3">
        Libertad es tu lema,\n
        en cautiverio no puedes habitar,\n
        prefieres muerte. \n
        \n
        Es por ello que tú nos representas, \n
        ¡nuestro amado Quetzal!.\n
        \n
        Tu pecho rojo nos recuerda \n
        el día que fuera muerto el héroe nacional, \n
        Tecún Umán quien muriera en cruel batalla \n
        ¡en defensa de nuestra libertad!\n
        \n
        Vuela libre en las montañas de esta tierra,\n
        Ave símbolo de belleza singular, \n
        alzaremos por siempre el estandarte \n
        del sagrado principio: ¡LIBERTAD!\n
        \n
        Autor desconocido.\n
        \n
        </string>

</resources>