<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MAPoemaBandera"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloBandera"
        android:layout_marginTop="45sp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="15sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A MI BANDERA CELESTE"
                android:textStyle="bold"
                android:textColor="#356d97"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bCeleste"
                android:textSize="15sp"
                android:textIsSelectable="true"
                android:justificationMode="inter_word"
                android:layout_marginTop="10sp"
                android:textStyle="normal"
                />
            <ImageView
                android:layout_width="400sp"
                android:layout_height="250sp"
                android:layout_marginTop="5sp"
                android:src="@drawable/bangt"
               />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A MI BANDERA AMADA"
                android:textStyle="bold"
                android:textColor="#356d97"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bAmada"
                android:textSize="15sp"
                android:textIsSelectable="true"
                android:justificationMode="inter_word"
                android:textStyle="normal"
                />
            <ImageView
                android:layout_width="200sp"
                android:layout_height="250sp"
                android:layout_marginTop="5sp"
                android:src="@drawable/bande2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MI BANDERA MIA"
                android:textStyle="bold"
                android:textColor="#356d97"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/banderaMia"
                android:textSize="15sp"
                android:textIsSelectable="true"
                android:layout_marginTop="10sp"
                android:justificationMode="inter_word"
                android:textStyle="normal"
                />
            <ImageView
                android:layout_width="350sp"
                android:layout_height="250sp"
                android:layout_marginTop="5sp"
                android:src="@drawable/miabd"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TU QUE VIENES CAMINANDO"
                android:textStyle="bold"
                android:textColor="#356d97"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bcaminando"
                android:textSize="15sp"
                android:textIsSelectable="true"
                android:layout_marginTop="10sp"
                android:justificationMode="inter_word"
                android:textStyle="normal"
                />
            <ImageView
                android:layout_width="340sp"
                android:layout_height="250sp"
                android:layout_marginTop="5sp"
                android:src="@drawable/portada"
                 />

            <Button
                android:id="@+id/btnBandera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="REGRESAR"
                android:backgroundTint="#356d97"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="  "
                android:textSize="30sp"

                />

        </LinearLayout>



        
    </ScrollView>


</LinearLayout>