<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MAMonja"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloMonja"
        android:layout_marginTop="25sp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="15sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Eres símbolo"
                android:textStyle="bold"
                android:textColor="#356d97"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/simbolo"
                android:textSize="15sp"
                android:textIsSelectable="true"
                android:justificationMode="inter_word"
                android:textStyle="normal"
                />

            <ImageView
                android:layout_width="400sp"
                android:layout_height="300sp"
                android:src="@drawable/monja1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bella Monja Blanca"
                android:textStyle="bold"
                android:textColor="#356d97"
                android:layout_marginTop="10sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bellaMonj"
                android:textSize="15sp"
                android:textIsSelectable="true"
                android:justificationMode="inter_word"
                android:textStyle="normal"

                />
            <ImageView
                android:layout_width="350sp"
                android:layout_height="300sp"
                android:src="@drawable/monjap"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Flore de mi verapaz"
                android:textStyle="bold"
                android:textColor="#356d97"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/florVera"
                android:textSize="15sp"
                android:textIsSelectable="true"
                android:justificationMode="inter_word"
                android:textStyle="normal"
                />

            <ImageView
                android:layout_width="400sp"
                android:layout_height="200sp"
                android:src="@drawable/simoultimo"/>

            <Button
                android:id="@+id/btnMonjar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:text="REGRESAR"
                android:backgroundTint="#356d97"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="  "
                android:textSize="30sp">

            </TextView>


        </LinearLayout>

    </ScrollView>

</LinearLayout>